On W A S D charcters can now move through the grid